--- a/src/ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
+++ b/src/ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    @*<nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,14 +38,14 @@
         </div>
     </nav>
 
-    <partial name="_CookieConsentPartial" />
+    <partial name="_CookieConsentPartial" />*@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; 2018 - ExpressiveAnnotations.NetCoreSample</p>
-        </footer>
+        </footer>*@
     </div>
 
     <environment include="Development">
