--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Query.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Query.cshtml
@@ -1,8 +1,8 @@
 ﻿@using System.Threading
-@using ExpressiveAnnotations.NetCoreSample
-@using ExpressiveAnnotations.NetCoreSample.Misc
+@using UoN.ExpressiveAnnotations.NetCoreSample
+@using UoN.ExpressiveAnnotations.NetCoreSample.Models
 @*@using MvcCheckBoxList.Model*@
-@model ExpressiveAnnotations.NetCoreSample.Models.Query
+@model UoN.ExpressiveAnnotations.NetCoreSample.Models.Query
 
 @{ var lang = Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName; }
 
