--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Threading
+@using UoN.ExpressiveAnnotations.NetCoreSample.Models
 @*@using ExpressiveAnnotations.NetCoreSample.Misc*@
-@model ExpressiveAnnotations.NetCoreSample.Models.Query
+@model UoN.ExpressiveAnnotations.NetCoreSample.Models.Query
 
 @{
     var lang = Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName;
