--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/Error.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using UoN.ExpressiveAnnotations.NetCoreSample.Models
+@model UoN.ExpressiveAnnotations.NetCoreSample.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
