--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExpressiveAnnotations.NetCoreSample.Models.Contact
+﻿@using UoN.ExpressiveAnnotations.NetCoreSample.Models
+@model UoN.ExpressiveAnnotations.NetCoreSample.Models.Contact
 
 @{
     var client = "client".Equals(ViewBag.Validation);
