--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/_ViewImports.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using ExpressiveAnnotations.NetCoreSample
-@using ExpressiveAnnotations.NetCoreSample.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
