--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
@@ -32,9 +32,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
-
-    <partial name="_CookieConsentPartial" />*@
+    </nav>*@
 
     <div class="container body-content">
         @RenderBody()
