Set 'client' flag in NetCoreSample view to always be true, rather than setting it from the Validation flag in the ViewBag, which is part of the original sample which is currently commented out. This enables the custom client-side scripts which, amongst other things, set up the ValueParsers.

--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
@@ -5,7 +5,8 @@
 
 @{
     var lang = Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName;
-    var client = "client".Equals(ViewBag.Validation);
+    //var client = "client".Equals(ViewBag.Validation);
+    var client = true;
     var indication = ViewBag.Indication;
     var triggers = ViewBag.Triggers;
     var verbose = ViewBag.Verbose;
