--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Threading
 @using UoN.ExpressiveAnnotations.NetCoreSample.Models
-@*@using ExpressiveAnnotations.NetCoreSample.Misc*@
+@using UoN.ExpressiveAnnotations.NetCoreSample.Misc
 @model UoN.ExpressiveAnnotations.NetCoreSample.Models.Query
 
 @{
@@ -35,10 +35,10 @@
     <fieldset>
         <legend>Usage sample for model validation in .NET Core MVC</legend>
         <div id="panel" class="box-small">
-            @*@Html.Partial("_Culture")
-            @Html.Partial("_Validation")
-            @Html.Partial("_Indications")
-            @Html.Partial("_EAOptions")*@
+            @Html.PartialAsync("_Culture")
+            @Html.PartialAsync("_Validation")
+            @Html.PartialAsync("_Indications")
+            @Html.PartialAsync("_EAOptions")
         </div>
         @Html.EditorFor(model => model)
         <input type="submit" value="Submit" />
