Added temporary workaround in Contact partial view, for client flag not coming through from ViewBag.

--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
@@ -2,7 +2,8 @@
 @model UoN.ExpressiveAnnotations.NetCoreSample.Models.Contact
 
 @{
-    var client = "client".Equals(ViewBag.Validation);
+    //var client = "client".Equals(ViewBag.Validation);
+    var client = true;
 }
 
 <ol>
