Added BaseController back in to project and changed to use OnActionExecuting() rather than Initialize(). Changed HomController to inherit from it, and reset client variable in Home and Contact views to use the value from the now-available ViewBag field.

--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Contact.cshtml
@@ -2,8 +2,7 @@
 @model UoN.ExpressiveAnnotations.NetCoreSample.Models.Contact
 
 @{
-    //var client = "client".Equals(ViewBag.Validation);
-    var client = true;
+    var client = "client".Equals(ViewBag.Validation);
 }
 
 <ol>
