--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/Home.cshtml
@@ -5,8 +5,7 @@
 
 @{
     var lang = Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName;
-    //var client = "client".Equals(ViewBag.Validation);
-    var client = true;
+    var client = "client".Equals(ViewBag.Validation);
     var indication = ViewBag.Indication;
     var triggers = ViewBag.Triggers;
     var verbose = ViewBag.Verbose;
