--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
@@ -17,6 +17,14 @@
     <div class="container body-content">
         @RenderBody()
     </div>
-@RenderSection("Scripts", required: false)
+
+    <environment include="Development">
+        <script src="~/js/jquery.js" app-append-version="true"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/site.min.js" app-append-version="true"></script>
+    </environment>
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
