Removed unused directives throughout solution.

--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Address.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Address.cshtml
@@ -1,5 +1,4 @@
-﻿@using UoN.ExpressiveAnnotations.NetCoreSample.Models
-@model UoN.ExpressiveAnnotations.NetCoreSample.Models.Address
+﻿@model UoN.ExpressiveAnnotations.NetCoreSample.Models.Address
 
     <pre class="code">
 [AssertThat("StartsWith(Details, StreetPrefix)")]
