--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/Error.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/Error.cshtml
@@ -1,5 +1,4 @@
-﻿@using UoN.ExpressiveAnnotations.NetCoreSample.Models
-@model UoN.ExpressiveAnnotations.NetCoreSample.Models.ErrorViewModel
+﻿@model UoN.ExpressiveAnnotations.NetCoreSample.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
