--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Query.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Home/EditorTemplates/Query.cshtml
@@ -1,7 +1,6 @@
 ﻿@using System.Threading
 @using UoN.ExpressiveAnnotations.NetCoreSample
 @using UoN.ExpressiveAnnotations.NetCoreSample.Models
-@*@using MvcCheckBoxList.Model*@
 @model UoN.ExpressiveAnnotations.NetCoreSample.Models.Query
 
 @{ var lang = Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName; }
@@ -130,7 +129,7 @@
         <pre class="action">[show attribute]</pre>
         <div>
             @Html.LabelFor(model => model.PoliticalStability, new { @class = "inline prefix" })
-            @*@Html.EnumDropDownListFor(model => model.PoliticalStability, true)*@
+            @Html.DropDownListFor(model => model.PoliticalStability, Html.GetEnumSelectList<Stability>())
             @Html.ValidationMessageFor(model => model.PoliticalStability)
         </div>
     </li>
@@ -211,8 +210,8 @@
             @Html.ValidationMessageFor(model => model.FlightId)
         </div>
     </li>
-    <li>
-        <pre class="code">
+<li>
+    <pre class="code">
 [RequiredIf("GoAbroad == true")]
 [AssertThat("GoAbroad
                  ? IntArrayLength(SelectedDonations) > 2
@@ -222,18 +221,19 @@
                  : true", Priority = 2")]
 [ValueParser("ArrayParser")]
 </pre>
-        <pre class="action">[show attribute]</pre>
-        <div>
-            @Html.LabelFor(model => model.SelectedDonations, new { @class = "inline prefix" })
-            @*@Html.CheckBoxListFor(model => model.SelectedDonations, model => model.AvailableDonations, item => item, item => item, model => model.SelectedDonations, Position.Horizontal, model => new { @class = "cboxlist inline" })*@
-            &nbsp;
-            @Html.CheckBoxFor(model => model.SelectedCurrencies[0]) <span class="cbox inline">Bitcoin</span>
-            @Html.CheckBoxFor(model => model.SelectedCurrencies[1]) <span class="cbox inline">Ethereum</span>
-            @Html.ValidationMessageFor(model => model.SelectedDonations)
-        </div>
-    </li>
-    <li>
-        <pre class="code">
+    <pre class="action">[show attribute]</pre>
+<div>
+    @Html.LabelFor(model => model.SelectedDonations, new { @class = "inline prefix" })
+    @Html.ListBoxFor(model => model.SelectedDonations, new SelectList(Model.AvailableDonations, null), string.Empty)
+</div>
+    <div>
+        @Html.LabelFor(model => model.SelectedCurrencies, new { @class = "inline prefix" })
+        @Html.CheckBoxFor(model => model.SelectedCurrencies[0]) <span class="cbox inline">Bitcoin</span>
+        @Html.CheckBoxFor(model => model.SelectedCurrencies[1]) <span class="cbox inline">Ethereum</span>
+        @Html.ValidationMessageFor(model => model.SelectedDonations)
+    </div>
+<li>
+    <pre class="code">
 [CustomRequiredIf("GoAbroad == true")]
 [CustomAssertThat("Length(コメント) > 1e1 - 1", Priority = 2)]
 [CustomAssertThat("Length(コメント) > 1e1 - 6", Priority = 1)]
