--- a/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
+++ b/src/UoN.ExpressiveAnnotations.NetCoreSample/Views/Shared/_Layout.cshtml
@@ -19,13 +19,12 @@
     </div>
 
     <environment include="Development">
-        <script src="~/js/jquery.js" asp-append-version="true"></script>
+        <script src="~/js/jquery.js" app-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/site.min.js" app-append-version="true"></script>
     </environment>
 
-<partial name="_ValidationScriptsPartial"/>
-@RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
